--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -25,5 +27,6 @@ package-lock.json
 package.json
 .eslintrc.cjs
 *.sw?
+
 
 
